--- a/src/components/dashboard/MainDashboard/MainDashboard.module.css
+++ b/src/components/dashboard/MainDashboard/MainDashboard.module.css
@@ -1,46 +1,61 @@
 .boardWrap {
   padding: 0 20px;
-  height: 100%;
   display: flex;
   gap: 32px;
   flex-wrap: nowrap;
-  padding-bottom: 80px;
-
-  @media (min-width: 1440px) {
-    padding-bottom: 30px;
-  }
-
-  @media (max-width: 768px) {
-    padding-bottom: 60px;
-  }
-
+  overflow-x: auto;
 }
 
-.columnsList{
+.boardWrap::-webkit-scrollbar {
+  height: 12px;
+  background-color: var(--darkBgColor);
+}
+
+.boardWrap::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  width: 12px;
+  border: none;
+  background-color: #404040;
+}
+
+.columnsList {
   display: flex;
-  gap: 32px;
+  gap: 18px;
   flex-wrap: nowrap;
-  padding-bottom: 20px;
-  overflow-x: auto;
+  margin-bottom: 24px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 52px;
+  }
+
+  @media (min-width: 1440px) {
+    margin-bottom: 16px;
+  }
 }
 
 .addColumnBtn {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 56px;
   gap: 8px;
+  min-width: 320px;
+  height: 56px;
+  padding: 0;
+
+  border: none;
   border-radius: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--mainTextColor);
   background-color: var(--secondaryBgColor);
-  transition: all 450ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 
-  @media (min-width: 375px) {
+  @media screen and (min-width: 375px) {
     width: 335px;
   }
-
-  @media (min-width: 768px) {
+  @media screen and (min-width: 767px) {
     width: 334px;
   }
 
