--- a/src/components/Forms/Help/Needhelp.module.css
+++ b/src/components/Forms/Help/Needhelp.module.css
@@ -1,11 +1,10 @@
-
 .formWrap {
   width: 350px;
-  height: 453px;
+  height: 355px;
   background-color: var(--modalBgColor);
   border-radius: 8px;
   border: 0.1px solid blue;
-  padding: 30px 24px;
+  padding: 24px 24px;
 }
 
 .formTitle {
@@ -25,15 +24,29 @@
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
   border-radius: 8px;
-  padding: 0 17px;
-
+  padding: 14px 18px;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
   letter-spacing: -0.02em;
   text-align: left;
-
   color: var(--mainTextColor);
+}
+
+.commentInput {
+  width: 300px;
+  height: 120px;
+  background-color: var(--inputsBgColor);
+  border: 1px solid var(--inputsBorderColor);
+  border-radius: 8px;
+  padding: 14px 18px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: var(--mainTextColor);
+  margin-top: 14px;
 }
 
 .formInput::placeholder {
@@ -177,7 +190,7 @@
   gap: 8px;
   justify-content: center;
   align-items: center;
-  margin-top: 55px;
+  margin-top: 24px;
   width: 100%;
   background-color: var(--accentColor);
   height: 49px;
