Revert "Heder_UserMenu_Modalka_Formik"

--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -5,18 +5,11 @@
   max-height: 200px;
   color: var(--mainTextColor);
   background-color: var(--secondaryBgColor);
+  opacity: 0.8;
 
   display: flex;
   align-items: center;
   gap: 4px;
-}
-
-.titleMenuTheme {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 0.67;
-  letter-spacing: -2%;
-  opacity: 0.8;
 }
 
 .buttonMenu {
@@ -30,10 +23,9 @@
 
 .iconChevronDown {
   stroke: var(--mainTextColor);
-  cursor: pointer;
 }
 
-/* .dropdownMenu {
+.dropdownMenu {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -44,16 +36,15 @@
   padding: 18px;
   background-color: #151515;
   border-radius: 8px;
-  gap: 4px;
-  border: 1px solid var(--accentColor);
+  border: 1px;
   opacity: 0;
+  transform: translateY(-10px);
+  visibility: hidden;
+  transform: 0.3s;
 }
 
-.menuList {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 0.67;
-  letter-spacing: -2%;
-  color: var(--mainTextColor);
-  opacity: 0.5;
-} */
+.dropdownMenu {
+  transform: translateY(0);
+  opacity: 0;
+  visibility: visible;
+}
