--- a/src/components/Forms/BoardForm/BoardForm.module.css
+++ b/src/components/Forms/BoardForm/BoardForm.module.css
@@ -4,7 +4,7 @@
   height: 453px;
   background-color: var(--modalBgColor);
   border-radius: 8px;
-  border: 0.1px solid blue;
+  border: 0.1px solid var(--inputsBorderColor);
   padding: 30px 24px;
 }
 
