--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -131,6 +131,7 @@ Form {
   }
 }
 .field {
+  padding-left: 10px;
   width: 100%;
   height: 100%;
   border: none;
@@ -141,20 +142,19 @@ Form {
   font-weight: 400;
   font-size: 14px;
   letter-spacing: -0.02em;
-  color: #fff;
+  color: inherit;
   &:hover {
-    background: #1f1f1f;
     opacity: 1;
   }
   &:active {
-    background: #1f1f1f;
     opacity: 1;
+    color: #fff;
   }
 }
 
-.field::placeholder {
+/* .field::placeholder {
   padding-left: 10px;
-}
+} */
 
 .button {
   border: none;
@@ -231,6 +231,6 @@ svg {
 }
 
 /* // * Підправити стилі на виведення помилки
-// * звірити валідації
+
 // * підключити зміну теми  
  */
