--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -107,7 +107,7 @@ Form {
   width: 285px;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 14px;
+  /* margin-bottom: 4px; */
   box-shadow: 0 4px 16px 0 rgba(22, 22, 22, 0.08);
   background: #1f1f1f;
   opacity: 0.4;
@@ -152,6 +152,10 @@ Form {
   }
 }
 
+.notError {
+  height: 10px;
+  margin: 2px;
+}
 /* .field::placeholder {
   padding-left: 10px;
 } */
@@ -223,6 +227,7 @@ svg {
   align-items: center;
   justify-content: left;
   height: 10px;
+  margin: 2px;
   font-size: 12px;
   color: #9dc888;
   padding-left: 12px;
@@ -230,7 +235,7 @@ svg {
   font-weight: 400;
 }
 
-/* // * Підправити стилі на виведення помилки
+/* 
 
 // * підключити зміну теми  
  */
