--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -65,7 +65,7 @@
   flex-direction: column;
   gap: 8px;
   overflow-y: auto;
-  height: 70vh;
+  max-height: 70vh;
   padding-right: 4px;
   margin-bottom: 14px;
 
