--- a/src/components/dashboard/MainDashboard/MainDashboard.module.css
+++ b/src/components/dashboard/MainDashboard/MainDashboard.module.css
@@ -4,6 +4,12 @@
   gap: 32px;
   flex-wrap: nowrap;
   overflow-x: auto;
+  overflow-y: hidden;
+  height: 81vh;
+
+  @media screen and (min-width: 1440px) {
+    height: 84vh;
+  }
 }
 
 .boardWrap::-webkit-scrollbar {
@@ -22,7 +28,7 @@
   display: flex;
   gap: 18px;
   flex-wrap: nowrap;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px;
 
   @media (min-width: 768px) {
     margin-bottom: 52px;
@@ -30,7 +36,7 @@
 
   @media (min-width: 1440px) {
     margin-bottom: 16px;
-  }
+  } */
 }
 
 .addColumnBtn {
