--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -1,3 +1,4 @@
+
 .columnWrap {
   display: flex;
   flex-direction: column;
@@ -13,6 +14,7 @@
   border-radius: 8px;
   justify-content: space-between;
   margin-bottom: 14px;
+  /* width: 100%; */
 
   @media (min-width: 375px) {
     width: 335px;
@@ -63,16 +65,12 @@
   flex-direction: column;
   gap: 8px;
   overflow-y: auto;
-  overflow-x: hidden;
-  height: 480px;
   max-height: 70vh;
-
   padding-right: 4px;
   margin-bottom: 14px;
 
   @media (min-width: 768px) {
     padding-right: 8px;
-    /* max-height: 640px; */
   }
 }
 
