--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -2,10 +2,11 @@
   display: flex;
   height: 100vh;
   background-color: var(--lightBgColor);
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .mainPage {
   width: 100%;
   height: 100vh;
+  overflow-x: auto;
 }
