--- a/src/components/Sidebar/Board/Board.module.css
+++ b/src/components/Sidebar/Board/Board.module.css
@@ -15,7 +15,7 @@
     content: '';
     width: 4px;
     height: 61px;
-    background-color: #bedbb0;
+    background-color: var(--boardAddIconBg);
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     position: absolute;
@@ -33,7 +33,6 @@
 @media screen and (min-width: 1440px) {
     .boardItem {
         width: 275px;
-        /* padding: 20px 22px 20px 22px; */
     }
 }
 
