--- a/src/components/Sidebar/Board/Board.module.css
+++ b/src/components/Sidebar/Board/Board.module.css
@@ -2,13 +2,25 @@
     display: flex;
     gap: 80px;
     justify-content: space-between;
-    width: 225px;
+    width: 100%;
     height: 61px;
     padding: 22px 10px 22px 14px;
     transition: 250ms;
     margin: 0;
     position: relative;
     cursor: pointer;
+}
+
+.boardItem:hover{
+    background-color: var(--lightBgColor);
+}
+
+.boardItem:hover .boardButton {
+    fill: var(--lightBgColor);
+}
+
+.boardItem:hover .boardIcon {
+    fill: var(--lightBgColor);
 }
 
 .boardItem::after {
@@ -44,6 +56,7 @@
 
 .boardIcon {
     stroke: var(--logoIconColor);
+    fill: var(--sidebarBgColor);
 }
 
 .boardText {
@@ -73,6 +86,7 @@
     padding: 0;
     background-color: transparent;
     border: transparent;
+    fill: var(--sidebarBgColor);
 }
 
 .iconButton {
