--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -1,4 +1,3 @@
-
 .columnWrap {
   display: flex;
   flex-direction: column;
@@ -9,10 +8,11 @@
 
 .columnTitleWrap {
   display: flex;
+  justify-content: space-between;
+  text-align: center;
   background-color: var(--darkBgColor);
   padding: 18px 20px;
   border-radius: 8px;
-  justify-content: space-between;
   margin-bottom: 14px;
   /* width: 100%; */
 
@@ -63,7 +63,7 @@
 .columnList {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
   overflow-y: auto;
   max-height: 70vh;
   padding-right: 4px;
@@ -110,6 +110,7 @@
   &:hover {
     background-color: var(--accentColorHover);
     color: var(--reversedTextColor);
+    cursor: pointer;
   }
 }
 
