--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -5,10 +5,11 @@
   max-height: 200px;
   color: var(--mainTextColor);
   background-color: var(--secondaryBgColor);
-
   display: flex;
   align-items: center;
   gap: 4px;
+  cursor: pointer;
+  padding: 10px;
 }
 
 .titleMenuTheme {
@@ -26,6 +27,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--secondaryBgColor);
+  cursor: pointer;
 }
 
 .iconChevronDown {
@@ -33,28 +35,47 @@
   cursor: pointer;
 }
 
-/* .dropdownMenu {
-  position: absolute;
-  bottom: 0;
-  left: 0;
 
-  transform: translateY(100%);
-  height: 107px;
+.menuList{
+  position: absolute;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
   width: 100px;
-  padding: 18px;
-  background-color: #151515;
+  height: 100px;
+  background-color: var(--modalBgColor);
   border-radius: 8px;
-  gap: 4px;
-  border: 1px solid var(--accentColor);
-  opacity: 0;
+  border: 1px solid var(--lightBgColor);
+  top: 150%;
+  left: -10%;
+
+  transition: 200ms linear;
+  padding: 15px;
+  cursor: default;
 }
 
-.menuList {
-  font-weight: 500;
+.menuItem{
   font-size: 14px;
-  line-height: 0.67;
-  letter-spacing: -2%;
-  color: var(--mainTextColor);
-  opacity: 0.5;
-} */
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: -0.02em;
+  text-align: left;
+
+  color: var(--secondaryTextColor);
+  cursor: pointer;
+
+}
+
+.menuItem:hover{
+  color: var(--accentColor);
+}
+
+.menuListHidden{
+  padding: 0 15px;
+  opacity: 0;
+  top: 70%;
+  height: 0;
+  border: none;
+  overflow: hidden;
+}
 
