--- a/src/components/Forms/Help/NeedHelpForm.module.css
+++ b/src/components/Forms/Help/NeedHelpForm.module.css
@@ -1,10 +1,22 @@
+
 .formWrap {
-  width: 350px;
+  width: 335px;
   height: 355px;
   background-color: var(--modalBgColor);
   border-radius: 8px;
   border: 0.1px solid var(--inputsBorderColor);
   padding: 24px 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .formWrap {
+    width: 400px;
+    height: 355px;
+    background-color: var(--modalBgColor);
+    border-radius: 8px;
+    border: 0.1px solid var(--inputsBorderColor);
+    padding: 24px 24px;
+  }
 }
 
 .formTitle {
@@ -19,7 +31,7 @@
 }
 
 .formInput {
-  width: 300px;
+  width: 287px;
   height: 49px;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
@@ -33,8 +45,25 @@
   color: var(--mainTextColor);
 }
 
+@media screen and (min-width: 768px) {
+  .formInput {
+    width: 352px;
+    height: 49px;
+    background-color: var(--inputsBgColor);
+    border: 1px solid var(--inputsBorderColor);
+    border-radius: 8px;
+    padding: 14px 18px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: -0.02em;
+    text-align: left;
+    color: var(--mainTextColor);
+  }
+}
+
 .commentInput {
-  width: 300px;
+  width: 287px;
   height: 120px;
   background-color: var(--inputsBgColor);
   border: 1px solid var(--inputsBorderColor);
@@ -47,6 +76,26 @@
   text-align: left;
   color: var(--mainTextColor);
   margin-top: 14px;
+  resize: none;
+}
+
+@media screen and (min-width: 768px) {
+  .commentInput {
+    width: 352px;
+    height: 120px;
+    background-color: var(--inputsBgColor);
+    border: 1px solid var(--inputsBorderColor);
+    border-radius: 8px;
+    padding: 14px 18px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: -0.02em;
+    text-align: left;
+    color: var(--mainTextColor);
+    margin-top: 14px;
+    resize: none;
+  }
 }
 
 .formInput::placeholder {
