--- a/src/components/dashboard/MainDashboard/MainDashboard.module.css
+++ b/src/components/dashboard/MainDashboard/MainDashboard.module.css
@@ -1,13 +1,23 @@
 .boardWrap {
-  padding: 0 20px;
+  margin: 0 20px;
   display: flex;
   gap: 32px;
   flex-wrap: nowrap;
   overflow-x: auto;
+  height: calc(100vh - 142px);
+
+  @media (max-width: 1440px) {
+    height: calc(100vh - 172px);
+  }
+
+  @media (max-width: 762px) {
+    height: calc(100vh - 162px);
+  }
 }
 
 .boardWrap::-webkit-scrollbar {
   height: 12px;
+  border-radius: 12px;
   background-color: var(--darkBgColor);
 }
 
