--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -1,33 +1,45 @@
 .menuTheme {
   position: relative;
-  margin: 0;
-  width: 68px;
-  max-height: 200px;
-  color: var(--mainTextColor);
-  background-color: var(--secondaryBgColor);
   display: flex;
   align-items: center;
-  gap: 4px;
+  justify-content: center;
+  /* gap: 4px;
   cursor: pointer;
-  padding: 10px;
+  padding: 10px; */
 }
-
-.titleMenuTheme {
+.buttonMenu {
+  position: relative;
   font-weight: 500;
   font-size: 14px;
   line-height: 0.67;
   letter-spacing: -2%;
   opacity: 0.8;
+  color: floralwhite;
+
+  padding: 10px;
+
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  background-color: inherit;
+  border-radius: 8px;
+
+  cursor: pointer;
 }
 
-.buttonMenu {
-  height: 16px;
-  width: 16px;
+.menuThemeWrap {
+  position: relative;
+  width: 32px;
+  height: 32px;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondaryBgColor);
-  cursor: pointer;
+}
+
+.buttonMenu:hover {
+  background-color: var(--lightBgColor);
 }
 
 .iconChevronDown {
@@ -35,8 +47,7 @@
   cursor: pointer;
 }
 
-
-.menuList{
+.menuList {
   position: absolute;
   display: flex;
   gap: 5px;
@@ -47,14 +58,13 @@
   border-radius: 8px;
   border: 1px solid var(--lightBgColor);
   top: 150%;
-  left: -10%;
 
   transition: 200ms linear;
   padding: 15px;
   cursor: default;
 }
 
-.menuItem{
+.menuItem {
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
@@ -63,14 +73,13 @@
 
   color: var(--secondaryTextColor);
   cursor: pointer;
-
 }
 
-.menuItem:hover{
+.menuItem:hover {
   color: var(--accentColor);
 }
 
-.menuListHidden{
+.menuListHidden {
   padding: 0 15px;
   opacity: 0;
   top: 70%;
@@ -78,4 +87,3 @@
   border: none;
   overflow: hidden;
 }
-
