--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -1,45 +1,33 @@
 .menuTheme {
   position: relative;
+  margin: 0;
+  width: 68px;
+  max-height: 200px;
+  color: var(--mainTextColor);
+  background-color: var(--secondaryBgColor);
   display: flex;
   align-items: center;
-  justify-content: center;
-  /* gap: 4px;
+  gap: 4px;
   cursor: pointer;
-  padding: 10px; */
+  padding: 10px;
 }
-.buttonMenu {
-  position: relative;
+
+.titleMenuTheme {
   font-weight: 500;
   font-size: 14px;
   line-height: 0.67;
   letter-spacing: -2%;
   opacity: 0.8;
-  color: floralwhite;
+}
 
-  padding: 10px;
-
+.buttonMenu {
+  height: 16px;
+  width: 16px;
   display: flex;
-  gap: 4px;
   justify-content: center;
   align-items: center;
-  background-color: inherit;
-  border-radius: 8px;
-
+  background-color: var(--secondaryBgColor);
   cursor: pointer;
-}
-
-.menuThemeWrap {
-  position: relative;
-  width: 32px;
-  height: 32px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.buttonMenu:hover {
-  background-color: var(--lightBgColor);
 }
 
 .iconChevronDown {
@@ -47,7 +35,8 @@
   cursor: pointer;
 }
 
-.menuList {
+
+.menuList{
   position: absolute;
   display: flex;
   gap: 5px;
@@ -58,13 +47,14 @@
   border-radius: 8px;
   border: 1px solid var(--lightBgColor);
   top: 150%;
+  left: -10%;
 
   transition: 200ms linear;
   padding: 15px;
   cursor: default;
 }
 
-.menuItem {
+.menuItem{
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
@@ -73,13 +63,14 @@
 
   color: var(--secondaryTextColor);
   cursor: pointer;
+
 }
 
-.menuItem:hover {
+.menuItem:hover{
   color: var(--accentColor);
 }
 
-.menuListHidden {
+.menuListHidden{
   padding: 0 15px;
   opacity: 0;
   top: 70%;
@@ -87,3 +78,4 @@
   border: none;
   overflow: hidden;
 }
+
