--- a/src/components/ThemeSelect/ThemeSelect.module.css
+++ b/src/components/ThemeSelect/ThemeSelect.module.css
@@ -1,7 +1,6 @@
 .menuTheme {
   position: relative;
   margin: 0;
-  width: 68px;
   max-height: 200px;
   color: var(--mainTextColor);
   background-color: var(--secondaryBgColor);
@@ -9,7 +8,16 @@
   align-items: center;
   gap: 4px;
   cursor: pointer;
-  padding: 10px;
+  padding: 15px;
+}
+
+.menuTheme:hover {
+  background-color: var(--lightBgColor);
+  border-radius: 8px;
+}
+
+.menuTheme:hover .iconChevronDown{
+  background-color: var(--lightBgColor);
 }
 
 .titleMenuTheme {
@@ -46,8 +54,8 @@
   background-color: var(--modalBgColor);
   border-radius: 8px;
   border: 1px solid var(--lightBgColor);
-  top: 150%;
-  left: -10%;
+  top: 140%;
+  left: 0;
 
   transition: 200ms linear;
   padding: 15px;
@@ -66,7 +74,7 @@
 
 }
 
-.menuItem:hover{
+.menuItem:hover {
   color: var(--accentColor);
 }
 
