--- a/src/components/dashboard/Filters/Filters.module.css
+++ b/src/components/dashboard/Filters/Filters.module.css
@@ -1,3 +1,12 @@
+.menuFilterTheme {
+  position: relative;
+  color: var(--mainTextColor);
+  background-color: var(--secondaryBgColor);
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .filterButton {
   display: flex;
   align-items: center;
@@ -9,10 +18,7 @@
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.02em;
-
-  &:hover {
-    cursor: pointer;
-  }
+  cursor: pointer;
 }
 
 .filterIcon {
