--- a/src/components/dashboard/HeaderDashboard/HeaderDashboard.module.css
+++ b/src/components/dashboard/HeaderDashboard/HeaderDashboard.module.css
@@ -2,15 +2,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0 0 24px;
+  padding: 14px 20px 0 20px;
   margin-bottom: 39px;
 
   @media (min-width: 768px) {
     margin-bottom: 26px;
+    padding: 26px 32px 0 32px;
   }
 
   @media screen and (min-width: 1440px) {
     margin-bottom: 10px;
+    padding: 10px 24px 0 24px;
   }
 }
 
