--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -105,6 +105,7 @@ Form {
   }
 }
 .fieldWrapper {
+  position: relative;
   display: flex;
   border-radius: 8px;
   height: 49px;
@@ -180,8 +181,7 @@ Form {
 }
 
 .notError {
-  height: 10px;
-  margin: 2px;
+  height: 14px;
 }
 
 .button {
@@ -254,7 +254,39 @@ svg {
   }
 }
 
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .errorMessage {
+  width: 100%;
+  height: 16px;
+  background-color: rgba(142, 139, 139, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  display: inline;
+  color: var(--mainTextColor);
+  float: left;
+  font-weight: 100;
+  font-size: 10px;
+  line-height: 14px;
+  position: absolute;
+  bottom: -14px;
+  right: 0;
+  padding: 1px 8px 1px;
+  animation: slideIn 0.3s ease forwards;
+}
+
+/* .errorMessage {
   display: flex;
   width: 100%;
   align-items: center;
@@ -262,11 +294,11 @@ svg {
   height: 10px;
   margin: 2px;
   font-size: 12px;
-  color: #9dc888;
+  color: #555655;
   padding-left: 12px;
   font-size: 12px;
   font-weight: 400;
-}
+} */
 
 /* 
 
