--- a/src/components/Sidebar/Board/Board.module.css
+++ b/src/components/Sidebar/Board/Board.module.css
@@ -92,11 +92,10 @@
 
 .iconButton {
     stroke: var(--logoIconColor);
-    opacity: 0.5;
     cursor: pointer;
 }
 
 .iconButton:hover,
 .iconButton:active {
-    stroke: var(--accentColorHover);
+    stroke: var(--accentColor);
 }
