--- a/src/components/dashboard/MainDashboard/MainDashboard.module.css
+++ b/src/components/dashboard/MainDashboard/MainDashboard.module.css
@@ -70,7 +70,7 @@
   }
 
   &:hover {
-    background-color: var(--accentColorHover);
+    background-color: var(--accentColor);
     color: var(--reversedTextColor);
   }
 }
